test/files/neg/t5544/Api_1.scala
import scala.annotation.StaticAnnotation

class ann(val bar: Any) extends StaticAnnotation

object Api {
  @ann({def baz = "baz!!"})
  def foo = println("foo")
}
